update handler done
